link to cmsc320 final

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>Homepage</title>
   </head>
   <body>
-    <a href="/dataScience">Go to Data Science</a>
+    <a href="/CMSC320Final">Go to CMSC320 Final</a>
   </body>
 </html>
